...

<resources>
    <string name="app_name">ทันระบาด</string>
    <string name="app_fullname">ทันระบาดสำรวจ</string>
    <string name="title_activity_survey">สำรวจ</string>
    <string name="title_activity_edit_survey">แก้ไขสำรวจ</string>
    <string name="save">บันทึก</string>
    <string name="save_place_failed">บันทึกสถานที่ไม่สำเร็จ</string>
    <string name="save_building_failed">บันทึกอาคารไม่สำเร็จ</string>
    <string name="save_survey_failed">บันทึกการสำรวจไม่สำเร็จ</string>
    <string name="user_not_found">ไม่พบข้อมูลผู้ใช้งาน</string>
    <string name="container_not_found">ไม่พบรายการภาชนะ</string>
    <string name="please_enter_resident">โปรดระบุจำนวนผู้อาศัย</string>
...
    <string name="survey_building_history">ประวัติการสำรวจ</string>
    <string name="survey_building_history_not_found">ไม่พบประวัติการสำรวจ</string>
    <string name="survey_more_building_button_text">กดเพื่อสำรวจอาคารเพิ่ม</string>
    <string name="finish">สิ้นสุด</string>

    <!--location-->
    <string name="save_location">บันทึกพิกัด</string>
    <string name="add_location">เพิ่มพิกัด</string>
    <string name="edit_location">แก้ไขพิกัด</string>
    <string name="define_building_location">ระบุพิกัดอาคาร</string>
    <string name="define_place_location">ระบุพิกัดสถานที่</string>
    <string name="remove_location">ลบพิกัด</string>
    <string name="please_define_location">กรุณาระบุพิกัด</string>
...
